// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render default component 1`] = `
Array [
  <template>
    metrics
  </template>,
  <div
    className="portal-workflow-metrics-app"
  >
    <div>
      <nav
        className="management-bar management-bar-light navbar navbar-expand-md"
      >
        <div
          className="container-fluid container-fluid-max-xl"
        >
          <div
            className="navbar-form navbar-form-autofit"
          >
            <form
              onSubmit={[Function]}
              role="search"
            >
              <div
                className="input-group"
              >
                <div
                  className="input-group-item"
                >
                  <input
                    className="form-control input-group-inset input-group-inset-after"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="search-for"
                    type="text"
                    value=""
                  />
                  <span
                    className="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      className="btn btn-unstyled"
                      disabled={true}
                      type="submit"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-search"
                        focusable="false"
                        role="presentation"
                      >
                        <use
                          href="//lexicon/icons.svg#search"
                        />
                      </svg>
                    </button>
                  </span>
                </div>
              </div>
            </form>
          </div>
        </div>
      </nav>
      <div
        className="lfr-search-container-wrapper container-fluid-1280"
      >
        <div>
          <div
            className="sheet taglib-empty-result-message"
          >
            <div
              className="taglib-empty-result-message-header"
            />
            <h3
              className="text-center"
            >
              no-current-metrics
            </h3>
            <div
              className="sheet-text text-center"
            >
              <p>
                once-there-are-active-processes-metrics-will-appear-here
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Should render default component without custom header 1`] = `
Array [
  <template />,
  <div
    className="portal-workflow-metrics-app"
  >
    <div>
      <nav
        className="management-bar management-bar-light navbar navbar-expand-md"
      >
        <div
          className="container-fluid container-fluid-max-xl"
        >
          <div
            className="navbar-form navbar-form-autofit"
          >
            <form
              onSubmit={[Function]}
              role="search"
            >
              <div
                className="input-group"
              >
                <div
                  className="input-group-item"
                >
                  <input
                    className="form-control input-group-inset input-group-inset-after"
                    disabled={true}
                    onChange={[Function]}
                    placeholder="search-for"
                    type="text"
                    value=""
                  />
                  <span
                    className="input-group-inset-item input-group-inset-item-after"
                  >
                    <button
                      className="btn btn-unstyled"
                      disabled={true}
                      type="submit"
                    >
                      <svg
                        className="lexicon-icon lexicon-icon-search"
                        focusable="false"
                        role="presentation"
                      >
                        <use
                          href="//lexicon/icons.svg#search"
                        />
                      </svg>
                    </button>
                  </span>
                </div>
              </div>
            </form>
          </div>
        </div>
      </nav>
      <div
        className="lfr-search-container-wrapper container-fluid-1280"
      >
        <div>
          <div
            className="sheet taglib-empty-result-message"
          >
            <div
              className="taglib-empty-result-message-header"
            />
            <h3
              className="text-center"
            >
              no-current-metrics
            </h3>
            <div
              className="sheet-text text-center"
            >
              <p>
                once-there-are-active-processes-metrics-will-appear-here
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
